--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simple react application to take notes."
     />
     <link rel="apple-touch-icon" href="/notesSelected.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
